[package]
name = "merge-io"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "A simple utility to merge a reader and writer to provide a duplex IO, with async support."
license = "MIT"
repository = "https://github.com/MOZGIII/merge-io-rs"
keywords = ["io", "async", "async-io"]

[dependencies]
futures-preview = "0.3.0-alpha.17"
