[package]
name = "merge-io"
version = "0.1.1"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "Merge two separate `AsyncRead` and `AsyncWrite` objects into a single I/O stream."
license = "MIT"
repository = "https://github.com/MOZGIII/merge-io-rs"
keywords = ["io", "async", "async-io"]
readme = "README.md"

[badges]
travis-ci = { repository = "MOZGIII/merge-io-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures-preview = "0.3.0-alpha.17"
