[package]
name = "merge-io"
version = "0.2.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "Merge two separate `AsyncRead` and `AsyncWrite` objects into a single I/O stream."
license = "MIT"
repository = "https://github.com/MOZGIII/merge-io-rs"
keywords = ["io", "async", "async-io"]
readme = "README.md"

[badges]
travis-ci = { repository = "MOZGIII/merge-io-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "MOZGIII/merge-io-rs" }
is-it-maintained-open-issues = { repository = "MOZGIII/merge-io-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
futures-preview = "0.3.0-alpha.19"
